Add ef core dependencies; Create db

--- a/Commander/appsettings.json
+++ b/Commander/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CommanderConnection":"Server=DESKTOP-2A8QSKB\\SQLEXPRESS;Database=CommanderDb;User ID=CommanderApi;Password=hahaha;"
+  } 
 }
